[metadata]
name = topfarm
version = 0.01
summary = Wind farm optimization framework based on FUSED-Wind
description-file = README.txt
keywords = openmdao
home-page = https://bitbucket.org/piredtu/topfarm
download-url = git@bitbucket.org:piredtu/topfarm.git
author = Pierre-Elouan Rethore
author-email = pire@dtu.dk
maintainer = Pierre-Elouan Rethore
maintainer-email = pire@dtu.dk
license = Research Collaboration/ Commercial
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = 
project-url = 

[openmdao]
copyright = (C) DTU-Wind Energy
static_path = [ '_static' ]

[easy_install]
find-links = http://openmdao.org/dists

