[metadata]
name = topfarm
version = 0.1.0
summary = Wind plant optimization tool based on FUSED-Wind and OpenMDAO
description-file = README.md
keywords = openmdao, TOPFARM, FUSED-Wind
home-page = https://github.com/DTUWindEnergy/TOPFARM
download-url = https://github.com/DTUWindEnergy/TOPFARM.git
author = Pierre-Elouan Rethore
author-email = pire@dtu.dk
maintainer = Pierre-Elouan Rethore
maintainer-email = pire@dtu.dk
license = AGPL v3.0
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist =
    openmdao.main==0.10.3
    openmdao.lib==0.10.3
    fusedwind
    numpy
    scipy
    matplotlib
    pandas
    seaborn
    pyopt
    pyopt_driver
provides-dist =
obsoletes-dist =
dependency_links =
    https://github.com/FUSED-Wind/fusedwind.git@v0.1.0#egg=fusedwind
    http://svn.pyopt.org/tags/release-1.2.0#egg=pyopt
requires-python = 
	>=2.6
	<3.0
requires-externals = 
project-url = https://github.com/DTUWindEnergy/TOPFARM

[openmdao]
copyright = (C) DTU-Wind Energy, TOPFARM Development Team
static_path = [ '_static' ]

[easy_install]
find-links = http://openmdao.org/dists

